# sos-scilab

./: README.md  Untitled1.ipynb  pyproject.toml  setup.py  setup.py.old
src/sos_scilab/: kernel.py  sos_py_repr.m
test/: test_data_exchange.py  test_interface.py
